# miio_linux_open

miio_agent/: Makefile.am  README.md  configure.ac
miio_agent/src/: agent_client.c  agent_sendline.c  miio_agent.c  miio_agent.h
miio_agent/src/mainloop/: mainloop.c
